--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ python-dotenv==1.0.1
 PyJWT==2.8.0
 pandas==2.0.3
 surprise==0.1
-tensorflow-cpu==2.10.1
+tensorflow==2.10.0
 numpy==1.24.3
 scikit-learn==1.3.2
 joblib==1.3.2
